force-app/main/default/objects/AI_Provider_Config__mdt/AI_Provider_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for AI service providers (Gemini, OpenAI, Anthropic, etc.) with API credentials and settings</description>
    <label>AI Provider Config</label>
    <pluralLabel>AI Provider Configs</pluralLabel>
</CustomObject>