force-app/main/default/objects/AI_Provider_Config__mdt/fields/Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Capabilities__c</fullName>
    <description>Provider capabilities (Web Search, Content Generation, Summarization, etc.) - Semicolon separated</description>
    <label>Capabilities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>