force-app/main/default/objects/AI_Provider_Config__mdt/fields/Cost_Per_1K_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_1K_Tokens__c</fullName>
    <description>Estimated cost per 1,000 tokens for budget tracking (in USD)</description>
    <label>Cost Per 1K Tokens</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>