force-app/main/default/objects/AI_Provider_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this AI provider is currently active and available for use</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>