force-app/main/default/objects/AI_Provider_Config__mdt/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <description>AI model identifier (e.g., gemini-1.5-flash, gpt-4o, claude-3-5-sonnet)</description>
    <label>Model Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>