force-app/main/default/objects/AI_Provider_Config__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Developer name of the Named Credential to use for API authentication</description>
    <label>Named Credential</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>