force-app/main/default/objects/AI_Provider_Config__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Provider priority for fallback (1 = highest priority, used first)</description>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>