force-app/main/default/objects/AI_Provider_Config__mdt/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <description>Name of the AI provider (Gemini, OpenAI, Anthropic, Einstein)</description>
    <label>Provider Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>